# discord-quiz-bot

./: Cargo.toml  README.md  schema.sql
src/: common.rs  db.rs  main.rs  mtg.rs  ygo.rs
src/mtg/: db.rs
src/ygo/: db.rs
