[package]
name = "ygo-quiz-bot"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.66"
reqwest = "^0.11.24"
scraper = "^0.18.1"
serde = "^1.0.148"
serde_json = "^1.0.113"
serenity = { version = "^0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "^0.53.0"
shuttle-serenity = "^0.53.0"
shuttle-shared-db = { version = "^0.53.0", features = ["postgres", "sqlx"] }
tokio = "^1.26.0"
sqlx = "^0.8.3"
tracing = "^0.1.37"
